@@ -13,6 +13,8 @@
 	* Source/UnixFileHandle.m: Fix to return gdomap port even if
 	getservbyname() doesn't.
 	* Source/NSTask.m: Try appending .exe extension to paths under windoze.
+	* Source/Unicode.m: GSFromUnicode() fix lossy conversion  for cases
+	where output encoding can't handle the unicode.
 
 2002-03-19  Richard Frith-Macdonald <rfm@gnu.org>
 
